# lucky-predictions

./: .gitignore  CLAUDE.md  README.md  daily.bat  install_schedule.bat  predict_all.bat  push_to_github.bat  pyproject.toml  run.py  setup.bat  train_all.bat
.github/workflows/: daily.yml  tests.yml
data/: power645.jsonl  power655.jsonl
docs/: ROADMAP.md  how-the-model-works.md
predictions/: ledger.jsonl  scorecard.json  scored.jsonl
src/: analyze.py  backtest.py  bankroll.py  config.py  crawler.py  dashboard.py  jackpot.py  predict.py  randomness.py
src/ml/: __init__.py  chain.py  compare.py  evaluate.py  features.py  gap.py  importance.py  joint.py  ledger.py  model.py  perpos.py  positional.py  predict_next.py  sampler.py  score.py  util.py
tests/: conftest.py  test_config.py  test_crawler.py  test_models.py  test_scoring.py  test_stats.py
