[project]
name = "vietlott-predictions"
version = "0.1.0"
description = "Crawl, analyze, and (for fun) predict Vietlott Power 6/55 and 6/45 draws."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
]

[tool.uv]
package = false
