[project]
name = "lucky-predictions"
version = "0.1.0"
description = "Crawl, analyze, and (for fun) predict Power 6/55 and 6/45 lottery draws."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
]

[project.optional-dependencies]
# ML experiments — install with:  uv sync --extra ml
ml = [
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "pandas>=2.0",
]
# tests — install with:  uv sync --extra ml --extra dev
dev = [
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.uv]
package = false
